Fixed the word-wrapping in mobile browsers

--- a/css/prism.css
+++ b/css/prism.css
@@ -13,7 +13,7 @@ pre[class*="language-"] {
 	white-space: pre-wrap;
 	word-spacing: normal;
 	word-break: normal;
-	word-wrap: normal;
+	word-wrap: break-word;
 
 	-moz-tab-size: 4;
 	-o-tab-size: 4;
